FSDump Change Log

  0.7 (2004/05/17)

    * TBA

  0.6 (2001/08/09)

    * Add handlers for:

      - PageTemplate

  0.5 (2001/08/03)

    * Add handlers for:

      - PythonScript

  0.4 (2001/06/18)

    * Conform to the "Finished Project Guidelines",
      http://dev.zope.org/Wikis/DevSite/Proposals/FinishedProductGuidelines

    * Added HelpSystem stuff.

    * Moved to use declarative security.

  0.3 (2001/01/06)

    * Dump ZClass icon.

    * Add handlers for:

      - Wizards

      - Wizard Pages

  0.2 (2000/11/19)

    * Add handlers for:

      - ZClasses

      - ZClass property sheets

      - TTW Permissions

      - TTW Factories

    * Fix unixism in 'Dumper._setFSPath()' -- thanks
      Craig! (cba@mediaone.net)

  0.1 (2000/11/16)

   * Initial release